--- a/vault.yaml
+++ b/vault.yaml
@@ -1,1 +1,4 @@
-foo: bar
+zendesk.support.subdomain: zendesk_subdomain
+zendesk.support.bot_agent_email: username@domain.com
+zendesk.support.bot_agent_api_token: xxx
+zendesk.support.target_password: xxx
