Added demo flows

--- a/bot/default.yaml
+++ b/bot/default.yaml
@@ -1,5 +1,5 @@
 type: meya.bot.element
-name: Hello World Bot
+name: WHOOP Bot
 avatar:
-  image: https://images.prismic.io/meya-website/c63a142a-a049-4da2-8c83-842325e31449_scifi-robot.png
+  image: https://imageproxy.themaven.net/https%3A%2F%2Fimages.saymedia-content.com%2F.image%2FMTY3NDk1NjAzODM0NzkxMzAz%2Fwhoop.png
 markdown: true
